--- a/views/formUsuario.html
+++ b/views/formUsuario.html
@@ -7,39 +7,52 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
+            background-color: #f8f9fa;
+        }
+        .container {
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
         }
-        form {
+        .form-container {
             width: 400px;
             padding: 20px;
-            border: 1px solid #ccc;
+            border: 1px solid #dee2e6;
             border-radius: 10px;
-            background-color: #f9f9f9;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-        input[type="text"] {
+        .form-title {
+            margin-bottom: 20px;
+            text-align: center;
+        }
+       
+        .btn-submit {
             width: 100%;
-            margin-bottom: 10px;
         }
-        label {
-            font-weight: bold;
+        .btn-back {
+            margin-top: 10px;
         }
     </style>
 </head>
 <body>
-    <form action="/usuarios/novo" method="post">
-        <div class="mb-3">
-            <label for="nickname" class="form-label">Nickname:</label>
-            <input type="text" id="nickname" name="nickname" class="form-control"/>
+    <div class="container">
+        <div class="form-container">
+            <h2 class="form-title">Cadastro de Usuário</h2>
+            <form action="/usuarios/novo" method="post">
+                <div class="mb-3">
+                    <label for="nickname" class="form-label">Nickname:</label>
+                    <input type="text" id="nickname" name="nickname" class="form-control"/>
+                </div>
+                <div class="mb-3">
+                    <label for="nome" class="form-label">Nome:</label>
+                    <input type="text" id="nome" name="nome" class="form-control"/>
+                </div>
+                <button type="submit" class="btn btn-primary btn-submit">Cadastrar</button>
+            </form>
+            <a href="/jogos/novo" class="btn btn-secondary btn-back">Cadastrar Jogo</a>
         </div>
-        <div class="mb-3">
-            <label for="nome" class="form-label">Nome:</label>
-            <input type="text" id="nome" name="nome" class="form-control"/>
-        </div>
-        <button type="submit" class="btn btn-primary">Cadastrar</button>
-    </form>
+    </div>
 </body>
 </html>
