--- a/views/formUsuario.handlebars
+++ b/views/formUsuario.handlebars
@@ -10,8 +10,7 @@
         <label for="nome" class="form-label">Nome:</label>
         <input type="text" id="nome" name="nome" class="form-control" value="{{usuario.nome}}" />
       </div>
-      <button type="submit" class="btn btn-primary btn-submit">{{#if usuario}}Salvar Alterações{{else}}Cadastrar{{/if}}</button>
+      <button type="submit" class="btn btn-primary btn-submit">{{#if usuario}}Atualizar{{else}}Cadastrar{{/if}} Usuário</button>
     </form>
-    <a href="/jogos/novo" class="btn btn-secondary btn-back">Cadastrar Jogo</a>
   </div>
 </div>
